--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ section {
 
 h2 {
   margin-bottom: 48px;
+  font-size: 34px;
 }
 
 .grid-3-cols {
@@ -58,10 +59,14 @@ header {
 
 h1 {
   margin-bottom: 24px;
+  font-size: 42px;
+  line-height: 1.2;
 }
 
 .header-text {
   margin-bottom: 24px;
+  font-size: 18px;
+  line-height: 1.1;
 }
 
 img {
@@ -74,9 +79,12 @@ img {
 
 .features-title {
   margin-bottom: 16px;
+  font-size: 20px;
 }
 
 .features-text {
+  font-size: 18px;
+  line-height: 1.5;
 }
 
 /* TESTIMONIAL */
@@ -90,11 +98,14 @@ img {
 
 .testimonial-box h2 {
   margin-bottom: 24px;
+  font-size: 28px;
 }
 
 .testimonial-text {
   font-style: italic;
   margin-bottom: 24px;
+  font-size: 18px;
+  letter-spacing: 1.5;
 }
 
 /* CHAIRS */
@@ -104,6 +115,7 @@ img {
 
 h3 {
   margin-bottom: 24px;
+  font-size: 20px;
 }
 
 .chair-details {
@@ -128,8 +140,10 @@ h3 {
 .chair-price {
   display: flex;
   justify-content: space-between;
+  font-size: 20px;
 }
 
 footer {
   margin-bottom: 48px;
+  font-size: 16px;
 }
