--- a/style.css
+++ b/style.css
@@ -6,18 +6,26 @@ FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
 
+/* 
+
+main color: #087f5b
+grey color: #343a40
+
+*/
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Josefin Sans", sans-serif;
 }
 
 /* ------------------------ */
 /* GENERAL STYLES */
 /* ------------------------ */
 body {
-  font-family: sans-serif;
+  font-family: "Josefin Sans", sans-serif;
+  color: #343a40;
+  border-bottom: 5px solid #087f5b;
 }
 
 .container {
@@ -39,6 +47,31 @@ h2 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 80px;
+}
+
+.btn:link,
+.btn:visited {
+  background-color: #087f5b;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 16px 32px;
+  display: inline-block;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #099268;
+}
+/* 
+.btn--big {
+  padding: 16px 32px;
+  font-size: 18px;
+} */
+
+.btn--small {
+  padding: 6px 10px;
+  font-size: 12px;
 }
 
 /* ------------------------ */
@@ -89,6 +122,9 @@ img {
 
 /* TESTIMONIAL */
 .testimonial-section {
+  background-color: #099268;
+  color: white;
+  padding: 24px;
 }
 
 .testimonial-box {
